--- a/my-App/package.json
+++ b/my-App/package.json
@@ -17,6 +17,7 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^28.0.2",
     "@vitejs/plugin-vue": "^5.2.1",
     "vite": "^6.0.3"
   }
